--- a/src/main/resources/static/tablaUsuario.html
+++ b/src/main/resources/static/tablaUsuario.html
@@ -120,7 +120,7 @@
                     </div>
                     <div class="col-4">
                         <button type="button" class="btn btn-primary float-right " data-toggle="modal"
-                                data-target="#exampleModal">
+                                data-target="#modalRegistrar">
                             Registrar usuario
                         </button>
                     </div>
@@ -205,13 +205,69 @@
 </div>
 
 <!-- Modal Editar-->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex=""
+<div class="modal fade" id="modalEditar" data-bs-backdrop="static" role="dialog" data-bs-keyboard="false" tabindex=""
      aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="staticBackdropLabel">Editar usuario</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"  aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form class="user">
+                    <div class="form-group row">
+                        <div class="col-sm-6 mb-3 mb-sm-0">
+                            <input type="text" class="form-control form-control-user" id="txt_nombresE"
+                                   placeholder="Nombres">
+                        </div>
+                        <div class="col-sm-6">
+                            <input type="text" class="form-control form-control-user" id="txt_apellidosE"
+                                   placeholder="Apellidos">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-6 mb-3 mb-sm-0">
+                            <input type="email" class="form-control form-control-user" id="txt_emailE"
+                                   placeholder="Email">
+                        </div>
+                        <div class="col-sm-6">
+                            <input type="tel" class="form-control form-control-user" id="txt_telefonoE"
+                                   placeholder="Teléfono celular">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control form-control-user" id="txt_cuentaE"
+                               placeholder="Nombre de usuario">
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-sm-6 mb-3 mb-sm-0">
+                            <input type="password" class="form-control form-control-user"
+                                   id="txt_contrasena1E" placeholder="Contraseña">
+                        </div>
+                        <div class="col-sm-6">
+                            <input type="password" class="form-control form-control-user"
+                                   id="txt_contrasena2E" placeholder="Repetir contraseña">
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <button type="button" class="btn btn-primary">Actualizar</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal Registrar-->
+<div class="modal fade" id="modalRegistrar" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
                 <form class="user">
@@ -252,8 +308,8 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary">Actualizar</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                <button onclick="registrarUsuario()" type="button" class="btn btn-primary">Registrar</button>
             </div>
         </div>
     </div>
@@ -280,6 +336,8 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+<!-- Registrar-->
+<script src="js/registrar.js"></script>
 </body>
 
 </html>
