--- a/src/main/resources/static/ingresar.html
+++ b/src/main/resources/static/ingresar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 
@@ -9,7 +9,7 @@
     <meta name="description" content="ingresar">
     <meta name="author" content="Victor Rojas">
 
-    <title>SB Admin 2 - Login</title>
+    <title>Inicio de sesión</title>
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
